<resources>
    <string name="app_name">TengizExpress</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="categories">Categories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_found_items">not found items</string>
    <string name="laptop">Laptop</string>
    <string name="select_filter">select filter</string>
    <string name="sort_by">sort by</string>
    <string name="all">All</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="last_viewed">Last Viewed</string>
    <string name="latest_search">Latest Search</string>
    <string name="clean_all_history">Clean all history</string>
    <string name="smart_speaker">Smart speaker</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="your_cart">Your cart</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create account</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_up">Sign up</string>
    <string name="logout">Logout</string>
    <string name="rating_and_reviews">Rating and reviews:</string>
    <string name="you_are_not_logged_in">You are not logged In</string>
    <string-array name="sort">
        <item>ascending price</item>
        <item>decreasing price</item>
    </string-array>
</resources>